--- a/now.json
+++ b/now.json
@@ -1,4 +1,11 @@
 {
-  "builds": [
+  "version":2,
+  "name":"express",
+  "builds":[
+    {"src":"*.json""@now/static"},
+    {"src":"*.js","use":"@now/node"}
+  ],
+  "routes":[
+    {"src":"/","dest":"app.js}
   ]
 }
